<resources>
    <string name="app_name">HCI Prototypes</string>

    <!--Activity Main-->
    <string name="attraction1_text">This is the first attraction.  It is an exhibit that is very interesting.</string>
    <string name="attraction2_text">This is the second attraction.  It is an exhibit that is very interesting.</string>
    <string name="attraction3_text">This is the third attraction.  Talking about it a lot is something that may or may not be difficult using the android String variable.</string>
    <string name="map_spiel">If you are lost or don\'t know where to go, press here to bring up a map.</string>
    <string name="more">\n\nPress here to find out more.</string>

    <!--Tristan Admin-->
    <string name="current">Currently Showing:</string>
    <string name="tour_members">Tour Members:</string>

    <!--Item Info-->
    <string name="heading">Lorem Ipsum</string>
    <string name="item_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut ante mi. Integer quis sagittis dui, quis interdum tortor. Praesent tincidunt vestibulum ullamcorper. Sed quis sodales felis, ut mollis est. Nunc ut viverra est, ac rutrum eros. Duis a turpis eget eros commodo hendrerit. Praesent hendrerit tincidunt molestie. Mauris porta ipsum eros, vitae feugiat dolor tincidunt ac. Duis et lacus et enim ultrices volutpat. Praesent nunc magna, dictum eu neque ut, finibus congue diam. Vivamus accumsan viverra sagittis. Nullam et metus in diam malesuada mattis.</string>
    <string name="help_text">This is some help text.  It will tell you all you need to know about the various things that you will need to know, and may also give you some ability to contact the tour guide if you get lost or have any other issues.\n\n http://www.police.tas.gov.au/ \n 000 \n 131 444</string>

    <!--John Labels-->
    <string name="help">HELP</string>
    <string name="map">MAP</string>
    <string name="info">INFO</string>
    <string name="select">SELECT</string>

    <!--Popup labels-->
    <string name="initial_text">Which designs do you want?</string>
    <string name="tristan_uis">Tristan\'s</string>
    <string name="john_uis">John\'s</string>
    <string name="which_mode">Which mode would you like?</string>
    <string name="john_admin">Admin</string>
    <string name="john_tour">Tour Member</string>
    <string name="tristan_admin">Admin</string>
    <string name="tristan_tour">Tour Member</string>
    <string name="tristan_solo">Self Guided</string>

    <string-array name="names">
        <item>Help desk</item>
        <item>HITLAB</item>
        <item>Labs corridor</item>
        <item>Video Conference Room</item>
        <item>Student Lounge</item>
        <item>Post Graduate offices</item>
    </string-array>

    <string-array name="small_desc">
        <item>The help desk where students may go for more information</item>
        <item>HITLAB - Human Interactive Technology Laboratory</item>
        <item>The corridor where the computer labs are situated</item>
        <item>The video conference room where most of the lectures at the university take place</item>
        <item>The student lounge where many students gather</item>
        <item>The corridor with the post graduate offices</item>
    </string-array>

    <string-array name="large_desc">
        <item>The help desk is where the technical staff in the building reside.  If someone has an issue, it is a good idea to pay them a visit to see if they can solve whatever the problem may be.</item>
        <item>The HITLAB is a virtual reality development space.  It has many different tools for students to work with virtual reality projects, including at least one VIVE virtual reality headset.</item>
        <item>This corridor holds the computer labs that the students use for their work.  These are a mix of Mac OS and Windows computers, used for different programs and classes.  At the end is the networks lab, which is only accessible by students doing networking related units (for example KIT201 and KIT304).</item>
        <item>Most of the lectures for ICT, especially in second and third year, are located in this Video Conference room, often video linked to Hobart.  The CTS (Computing and Technology Society) hold some of their events in this room as well.</item>
        <item>The Student lounge is somewhere that most undergraduate students will come in the breaks between their classes.  It is a social space for people to talk, work or play the boardgames on the shelf, provided by the CTS.</item>
        <item>Those doing postgraduate study are given offices down this corridor.  This allows them to focus harder on their work, given their own working space, and reduced distractions from other students.</item>
    </string-array>

</resources>
